# Huffman-Archiver

./: CMakeLists.txt  README.md
include/: bit_streams.h  huffman_archiver.h  huffman_exception.h  huffman_tree.h
src/: bit_streams.cpp  huffman_archiver.cpp  huffman_exception.cpp  huffman_tree.cpp  main.cpp
test/: autotest.cpp  autotest.h  huffman_test.cpp  huffman_test.h  test.cpp
